--- a/01_StudyBasic/TodoList/package.json
+++ b/01_StudyBasic/TodoList/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
+    "styled-components": "^5.3.5",
     "underscore": "^1.13.2"
   },
   "devDependencies": {
